# screen-ocr

./: Cargo.toml  LICENSE
src/: action.rs  app.rs  capture.rs  draw.rs  helper.rs  main.rs  render.rs  scenes.rs  state.rs  with_winit.rs  x11_screenshot.rs
src/capture/: mod.rs  mod.rs~  windows_capture.rs  x11_capture.rs
src/wayland/: mod.rs  output.rs  state.rs
