[package]
name = "trans-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
femtovg = { version = "0.9", default-features = false }
glutin = { version = "0.32" }
glutin-winit = { version = "0.5.0" }
ocrs = "0.8.0"
rten = "0.10.0"
winit = { version = "0.30.0", features = ["rwh_06"]}

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev.package.ocrs]
opt-level = 3

[profile.dev.package.rten]
opt-level = 3
